--- a/config.env
+++ b/config.env
@@ -6,7 +6,7 @@ PUBLIC_MODE='no'
 
 #═══════[ OWNER DETAILS ]═══════✧#
 OWNER_NAME="᚛Ibrahim adams᚜"
-OWNER_NUMBER="254792057306"
+OWNER_NUMBER="254768368867"
 
 #═══════[ BOT PROFILE ]═══════✧#
 BOT_NAME="BWM-XMD"
@@ -15,22 +15,22 @@ STARTING_BOT_MESSAGE='yes'
 
 #═══════[ PRESENCE & AUTOMATION ]═══════✧#
 PRESENCE='1'
-AUTO_READ="no"
+AUTO_READ="yes"
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
 
 #═══════[ CHAT FEATURES ]═══════✧#
-CHATBOT="no"
-AUDIO_CHATBOT="no"
+CHATBOT="yes"
+AUDIO_CHATBOT="yes"
 
 #═══════[ GROUP SECURITY ]═══════✧#
 GROUPANTILINK_REMOVE="no"
 ANTIDELETE_SENT_INBOX="yes"
-ANTIDELETE_RECOVER_CONVENTION="no"
+ANTIDELETE_RECOVER_CONVENTION="yes"
 
 #═══════[ MESSAGE HANDLING ]═══════✧#
 STATUS_REACT_EMOJIS="🚀,🌎"
-AUTO_REACT="no"
+AUTO_REACT="yes"
 WELCOME_MESSAGE="no"
 GOODBYE_MESSAGE="no"
 
@@ -39,9 +39,9 @@ HEROKU_APP_NAME=
 HEROKU_API_KEY=
 
 #═══════[ AUTO REACTIONS ]═══════✧#
-AUTO_REACT_STATUS="no"
+AUTO_REACT_STATUS="yes"
 AUTO_REPLY_STATUS="no"
-AUTO_REJECT_CALL="no"
+AUTO_REJECT_CALL="yes"
 AUTO_BIO="no"
 #════════════════════════════✧#
 
